fix(styles): Change background color to black for better contrast

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,7 +6,7 @@ body{
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
-    background-color: white;
+    background-color: rgb(0, 0, 0);
 }
 header{
     background-color: rgb(240, 240, 240)
